--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -94,8 +94,8 @@ button {
 }
 
 button:hover {
-  background-color: #28a213; /* Azul mais claro ao passar o mouse */
-  color: #060707;
+  background-color: #32c918; /* Azul mais claro ao passar o mouse */
+  color: #195210;
 }
 
 .justify-center {
